@@ -33,7 +33,10 @@
 
     PCL-5e laser printer (compatible to LaserJet 4, 1100, ...), so it
     works with drivers like HPIJS or &quot;ljet4&quot;. 1200-dpi
-    printing probably not supported with these drivers.&lt;p&gt;
+    printing is not supported with these drivers. The printer does not
+    understand PCL 6/XL, so it is not possible to print in 1200 dpi
+    with the &quot;pxlmono&quot; or &quot;lj5gray&quot;
+    drivers.&lt;p&gt;
 
     8 MB of RAM, parallel and USB connection, built-in 250-sheets
     tray.&lt;p&gt;
