@@ -1,3 +1,7 @@
+2003-08-13  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-LaserJet_1050.xml: Updated text.
+
 2003-08-11  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Apple-LaserWriter_Pro_630.xml: Added additional comments
